--- a/back-end/db-service/package.json
+++ b/back-end/db-service/package.json
@@ -10,12 +10,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "amqplib": "^0.10.5",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "kafka-js": "^0.0.0",
+    "kafkajs": "^2.2.4",
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.3",
     "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
-  }
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.10"
+  }    
 }
