--- a/SignalR/SignalRUI/SignalRUI.csproj
+++ b/SignalR/SignalRUI/SignalRUI.csproj
@@ -8,4 +8,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="9.0.1" />
+  </ItemGroup>
+
 </Project>
